# MySQL_HRM

./: CMakeLists.txt  README.md  build.bat  imgui.ini  main.cpp  main.h
include/imgui/examples/example_android_opengl3/: CMakeLists.txt
utils/: Employees.sql  LoginMenu.h  Menu.h  Module.h  layout.h  log.h
utils/Modules/: AttendanceManager.h  DataAnalysisManager.h  EmployeeManager.h  EmployeeServiceManager.h  HRM.h  PayrollManager.h  PerformanceManager.h  RecruitmentManager.h  TrainingManager.h
